Added in hover effect and highlight when clicking hotspot in output. Added landing page and image gallery section.

--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "sass": "^1.89.1",
     "sass-loader": "^16.0.5"
+  },
+  "dependencies": {
+    "swiper": "^11.2.8"
   }
 }
