--- a/vuetify-project/package.json
+++ b/vuetify-project/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@fontsource/roboto": "5.2.5",
     "@mdi/font": "7.4.47",
+    "axios": "^1.11.0",
+    "swiper": "^11.2.10",
     "vue": "^3.5.13",
     "vuetify": "^3.8.1"
   },
